--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -168,13 +168,38 @@
           <option value="Celery">Celery</option>
           <option value="Citrus">Citrus</option>
           <option value="Cotton">Cotton</option>
-           <option value="Cowpea">Cowpea</option>
+          <option value="Cowpea">Cowpea</option>
           <option value="Cucumber">Cucumber</option>
           <option value="Faba Bean">Faba Bean</option>
           <option value="Grains(small)">Grains(small)</option>
           <option value="Grapes">Grapes</option>
+          <option value="Groundnut">Groundnut</option>
+          <option value="Lettuce">Lettuce</option>
+          <option value="Lentil">Lentil</option>
+          <option value="Maize (grain)">Maize (grain)</option>
+          <option value="Maize (sweet)">Maize (sweet)</option>
+          <option value="Millet">Millet</option>
+          <option value="Olives">Olives</option>
+          <option value="Onion (dry)">Onion (dry)</option>
+          <option value="Onion (green)">Onion (green)</option>
+          <option value="Peas">Peas</option>
+          <option value="Pineapple">Pineapple</option>
+          <option value="Pistachios">Pistachios</option>
+          <option value="Potato">Potato</option>
+          <option value="Pumpkin">Pumpkin</option>
+          <option value="Radish">Radish</option>
+          <option value="Rice">Rice</option>
+          <option value="Sesame">Sesame</option>
+          <option value="Sorghum">Sorghum</option>
+          <option value="Soybeans">Soybeans</option>
+          <option value="Sugarcane">Sugarcane</option>
+          <option value="Sweet melons">Sweet melons</option>
+          <option value="Sweet peppers (bell)">Sweet peppers (bell)</option>
+          <option value="Sweet potato">Sweet potato</option>
+          <option value="Tomato">Tomato</option>
           <option value="Test">Test</option>
-
+          <option value="Water melons">Water melons</option>
+          <option value="Winter Wheat">Winter Wheat</option>
         </datalist>
       </div>
 
@@ -182,7 +207,7 @@
         <label for="region">Climate Zone</label>
         <select id="region" name="region" required>
           <option value="">Select region…</option>
-          <option value="Desert/Arid">Desert/Arid</option>
+          <option value="Arid">Desert/Arid</option>
           <option value="Semi-arid">Semi-arid</option>
           <option value="Sub-humid">Sub-humid</option>
           <option value="Humid">Humid</option>
