--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -34,7 +34,7 @@
   <!-- ===== HOME SECTION ===== -->
   <section id="home-section" class="section home-section">
     <div class="home-content">
-      <h1>Welcome, <span id="user-name">Farmer A</span></h1>
+      <h1>Welcome, <span id="name">Farmer A</span></h1>
       <p><strong>Location:</strong> <span id="user-location">Farm Zone 1</span></p>
       <p><strong>Farm ID:</strong> <span id="farm-id">001</span></p>
       <p class="balance-display">
