--- a/public/register.html
+++ b/public/register.html
@@ -4,22 +4,156 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Register</title>
-  <link rel="stylesheet" href="styles.css">
   <style>
-    /* (same styling as before) */
-    * { margin:0; padding:0; box-sizing:border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-    body { background: linear-gradient(to right,#00c6ff,#0072ff); min-height:100vh; display:flex; align-items:flex-start; justify-content:center; padding:2rem 1rem; }
-    .container { background:#fff; width:100%; max-width:480px; padding:2rem; border-radius:16px; box-shadow:0 8px 30px rgba(0,0,0,.15); }
-    h2 { text-align:center; color:#0072ff; margin-bottom:1.5rem; }
-    form input, form select { width:100%; padding:.75rem; margin-bottom:1rem; border:1px solid #cbd5e1; border-radius:8px; font-size:1rem; }
-    form input:focus, form select:focus { outline:none; border-color:#2563eb; box-shadow:0 0 0 3px rgba(37,99,235,0.2); }
-    .row { display:flex; gap:1rem; }
-    .row input { flex:1; }
-    .btn-primary { width:100%; padding:.85rem; background:#2563eb; color:#fff; font-weight:600; border:none; border-radius:8px; font-size:1.05rem; cursor:pointer; transition:background .25s; }
-    .btn-primary:hover{ background:#1e40af; }
-    .small { font-size:.9rem; text-align:center; margin-top:1rem; color:#475569; }
-    .small a { color:#2563eb; text-decoration:none; }
-    .error { color:#d9534f; margin-top:.5rem; text-align:center; font-size:.95rem; }
+    :root {
+      --bg-0: #ffffff;
+      --primary: #1e7a3a;
+      --primary-600: #18632b;
+      --accent: #28a745;
+      --muted: #4b5b4a;
+      --glass-border: rgba(30, 122, 58, 0.12);
+      --shadow-1: 0 12px 36px rgba(14, 36, 18, 0.08);
+      --radius-lg: 18px;
+      --ease: 220ms;
+      --font: "Segoe UI", Tahoma, sans-serif;
+    }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: var(--font); }
+    html, body { height: 100%; }
+
+    body {
+      background: var(--bg-0);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 1.25rem;
+      color: #243028;
+    }
+
+    #register-container {
+      width: 100%;
+      max-width: 420px;
+      background: #ffffff;
+      border-radius: var(--radius-lg);
+      padding: 36px 34px;
+      border: 1px solid var(--glass-border);
+      box-shadow: var(--shadow-1);
+      position: relative;
+    }
+
+    #register-container::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 0;
+      height: 6px;
+      background: linear-gradient(90deg, var(--primary), var(--accent));
+      border-top-left-radius: var(--radius-lg);
+      border-top-right-radius: var(--radius-lg);
+    }
+
+    #register-form h2 {
+      color: var(--primary);
+      font-size: 1.9rem;
+      text-align: center;
+      margin-bottom: 8px;
+    }
+
+    #register-form p {
+      color: var(--muted);
+      text-align: center;
+      font-size: 0.95rem;
+      margin-bottom: 20px;
+    }
+
+    #register-form input,
+    #register-form select {
+      width: 100%;
+      padding: 12px 14px;
+      margin-bottom: 16px;
+      border: 1px solid var(--glass-border);
+      border-radius: 6px;
+      font-size: 1rem;
+      background: #ffffff;
+      color: #243028;
+      transition: border var(--ease), box-shadow var(--ease);
+    }
+
+    #register-form input:focus,
+    #register-form select:focus {
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.2);
+      outline: none;
+    }
+
+    #register-form input::placeholder {
+      color: var(--muted);
+      opacity: 0.7;
+    }
+
+    #register-form button.btn-primary {
+      width: 100%;
+      padding: 12px 14px;
+      border-radius: 6px;
+      border: none;
+      background: linear-gradient(180deg, var(--primary), var(--primary-600));
+      color: #fff;
+      font-weight: 700;
+      font-size: 1rem;
+      box-shadow: 0 4px 12px rgba(30, 122, 58, 0.12);
+      cursor: pointer;
+      transition: transform var(--ease), box-shadow var(--ease);
+    }
+
+    #register-form button.btn-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 16px rgba(30, 122, 58, 0.16);
+    }
+
+    .row {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-bottom: 16px;
+    }
+
+    .row input {
+      flex: 1;
+      min-width: 150px;
+    }
+
+    #register-form select {
+      appearance: none;
+      background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"><path fill="%234b5b4a" d="M7 10l5 5 5-5z"/></svg>');
+      background-repeat: no-repeat;
+      background-position: right 0.8rem center;
+      background-size: 12px;
+    }
+
+    .small {
+      margin-top: 10px;
+      text-align: center;
+      font-size: 0.95rem;
+      color: var(--muted);
+    }
+
+    .small a {
+      color: var(--primary);
+      font-weight: 700;
+      text-decoration: none;
+    }
+
+    .small a:hover {
+      text-decoration: underline;
+    }
+
+    .error {
+      color: #c0392b;
+      font-size: 0.95rem;
+      text-align: center;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
