updated images and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
                     <div className="relative rounded-lg overflow-hidden shadow-md">
                       <img src="images/irrigation.jpg" alt="Irrigation System" className="w-full h-auto object-cover" />
                       <p className="absolute bottom-0 w-full bg-green-800 bg-opacity-75 text-white text-center py-3 text-sm font-semibold">
-                        Precision Drip Irrigation
+                        Sprinkler Irrigation
                       </p>
                     </div>
                     <div className="relative rounded-lg overflow-hidden shadow-md">
@@ -96,9 +96,9 @@
                       </p>
                     </div>
                     <div className="relative rounded-lg overflow-hidden shadow-md">
-                      <img src="images/clusterfarm.jpg" alt="Cluster Farm" className="w-full h-auto object-cover" />
+                      <img src="images/drip.jpg" alt="Cluster Farm" className="w-full h-auto object-cover" />
                       <p className="absolute bottom-0 w-full bg-green-800 bg-opacity-75 text-white text-center py-3 text-sm font-semibold">
-                        Automated Valve Control
+                        Drip Irrigation
                       </p>
                     </div>
                   </div>
@@ -128,7 +128,7 @@
                 {/* Feature Card 2 */}
                 <div className="bg-white rounded-xl shadow-lg overflow-hidden text-center transform transition duration-300 hover:scale-105">
                   <img
-                    src="https://images.unsplash.com/photo-1509395176047-4a66953fd231?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60"
+                    src="images/remote.jpg"
                     alt="Mobile Monitoring"
                     className="w-full h-48 object-cover"
                   />
@@ -143,7 +143,7 @@
                 {/* Feature Card 3 */}
                 <div className="bg-white rounded-xl shadow-lg overflow-hidden text-center transform transition duration-300 hover:scale-105">
                   <img
-                    src="https://images.unsplash.com/photo-1542831371-d531d36971e6?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=60"
+                    src="images/sustainable.jpg"
                     alt="Sustainable Farming"
                     className="w-full h-48 object-cover"
                   />
